working on figma design

--- a/src/components/sections/section-02.html
+++ b/src/components/sections/section-02.html
@@ -1,5 +1,61 @@
-<table class="w-full">
+
+<table class="w-full bg-[#F0F5F5]">
   <tr>
-    <td>section-02</td>
+    <td class="pt-8 px-5">
+      <table class="w-full">
+        <tr>
+          <td class="font-bold px-10 pb-8 leading-7 text-[#005555] text-2xl text-center">
+            Sint cupidatat occaecat ut
+          </td>
+        </tr>
+        <tr>
+          <td class="pb-10">
+            <table class="w-full text-center">
+              <tr>
+                <td class=" pb-8 px-5 xs:w-full w-[48%] text-center bg-[#FFFFFF] xs:inline-block">
+                  <table class="w-full text-center">
+                    <tr>
+                      <td class="text-center px-xs pb-2 pt-7">
+                        <x-image class="w-[100px]" imgUrl="image-6.png" href="#" />
+                      </td>
+                    </tr>
+                    <tr>
+                      <td class="font-bold text-center text-lg text-[#005555] pt-2 leading-5">
+                        Nisi ut ade
+                      </td>
+                    </tr>
+                    <tr>
+                      <td class="text-center text-base pt-4 leading-5">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.<span class="text-[9px] [line-height:0] [vertical-align:6px]">1</span>
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+                <td class="xs:w-full w-[4%] text-[#005555] xs:inline-block sm:pt-3">&nbsp;</td>
+                <td class="bg-[#FFFFFF] pb-8 px-5 w-[48%] text-center xs:w-full xs:inline-block">
+                  <table class="w-full text-center">
+                    <tr>
+                      <td class="px-xs text-center pb-2 pt-7">
+                        <x-image class="w-[100px]" imgUrl="image-6.png" href="#" />
+                      </td>
+                    </tr>
+                    <tr>
+                      <td class="font-bold text-center text-lg text-[#005555] pt-2 leading-5">
+                        Duis aute irure
+                      </td>
+                    </tr>
+                    <tr>
+                      <td class="text-center pt-4 leading-5 text-base">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.<span class="text-[9px] [line-height:0] [vertical-align:6px]">2</span>
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table>
+    </td>
   </tr>
 </table>
