--- a/src/components/fragments/fragment-01.html
+++ b/src/components/fragments/fragment-01.html
@@ -1,7 +1,34 @@
 <!-- fragment 1 start -->
 <table class="w-full">
   <tr>
-    <td>fragment-01</td>
+    <td class="pt-5 pb-[6px] px-5  pb-[6px]">
+      <x-image class="w-[600px]" imgUrl="image-1.png" href="#" />
+    </td>
+  </tr>
+  <tr>
+    <td class="text-[#005555] text-center pt-6  text-2xl leading-7 font-bold px-12">
+      Excepteur sint occaecat cupidatat 
+    </td>
+  </tr>
+  <tr>
+    <td class="text-base pt-5 px-12 text-center  leading-5">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  
+    </td>
+  </tr>
+  <tr>
+    <td class="py-base align-center-table pt-6 pb-10 px-5 text-white ">
+      <x-button
+        padding="8px 20px"
+        width="280"
+        height="40"
+        leading="24"
+        rounded="10"
+        CTA
+        class="font-bold xs:w-full cursor-pointer"
+        bgColor="#008080"
+        >Ut enim ad minim veniam
+      </x-button>
+    </td>
   </tr>
 </table>
 <!-- fragment 1 end -->
