--- a/src/components/sections/section-01.html
+++ b/src/components/sections/section-01.html
@@ -1,5 +1,10 @@
 <table class="w-full">
   <tr>
-    <td>section-01</td>
+    <td class="px-base pb[6px] pt-base">
+      <x-image class="sm:w-[300px] w-[140px]" imgUrl="image-2.png" href="#" />
+    </td>
+    <td class="leading-[14px] text-xs px-5 xs:pe-0">
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    </td>
   </tr>
 </table>
